--- a/demo/main.css
+++ b/demo/main.css
@@ -5,12 +5,143 @@ body {
   font-family: sans-serif;
 }
 
+:root {
+  --theme-color: #222;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-.flexbox {
-  display: flex;
+:global(.glider) {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 900px;
+  height: 300px;
+  margin: 30px auto;
+  background: var(--theme-color);
+  color: #fff;
 }
+
+:global(.slide) {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 20px 50px;
+  transform: translate3d(100%, 0, 0);
+  z-index: 0;
+  border: 5px solid red;
+  user-select: none;
+  display: flex;
+  flex-direction: column;
+}
+
+:global(.yellow) {
+  background: #d69833;
+}
+
+:global(.red) {
+  background: #d53f42;
+}
+
+:global(.green) {
+  background: #43dd55;
+}
+
+:global(.orange) {
+  background: #d67422;
+}
+
+:global(.pink) {
+  background: #d660d2;
+}
+
+:global(.pagers) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  visibility: hidden;
+  z-index: 5;
+}
+
+:global(.prev),
+:global(.next) {
+  position: absolute;
+  top: 50%;
+  width: 2em;
+  height: 2em;
+  font-size: 25px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  background: var(--theme-color);
+  color: #fff;
+  border: 2px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: visible;
+}
+
+:global(.prev) {
+  left: 10px;
+}
+
+:global(.next) {
+  right: 10px;
+}
+
+.pluginLoaded :global(.slide) {
+  border-color: var(--theme-color);
+}
+
+:global(.jsHook) {
+  /* slide */
+}
+
+:root {
+  --speed: 0.25s;
+}
+
+.active {
+  transform: translate3d(0%, 0, 0);
+  z-index: 2;
+}
+
+.previous,
+.next {
+  z-index: 3;
+}
+
+.previous {
+  transform: translate3d(-100%, 0, 0);
+}
+
+.next {
+  transform: translate3d(100%, 0, 0);
+}
+
+.active,
+.next,
+.prev {
+  &.init,
+  &.init.back {
+    transition: none;
+  }
+}
+
+:global(.log) {
+  /* log element */
+  background: black;
+  flex: 1;
+  margin: 20px;
+  width: calc(100% - 40px);
+}
+
