--- a/demo/main.css
+++ b/demo/main.css
@@ -1,12 +1,18 @@
-body {
-  margin: 0;
-  background: #fff;
-  color: #000;
-  font-family: sans-serif;
-}
 
 :root {
-  --theme-color: #222;
+  --theme-bg: #fc1e52;
+  --theme-color: #fff;
+  --log-color: rgba(0, 0, 0, 0.2);
+  --padding: 1rem;
+  --nav-size: 3rem;
+  --pager-size: 2rem;
+}
+
+body {
+  margin: 0;
+  background: var(--theme-bg);
+  color: var(--theme-color);
+  font-family: sans-serif;
 }
 
 *,
@@ -16,14 +22,23 @@ body {
 }
 
 :global(.glider) {
-  overflow: hidden;
   position: relative;
   width: 100%;
   max-width: 900px;
-  height: 300px;
-  margin: 30px auto;
-  background: var(--theme-color);
-  color: #fff;
+  height: 20em;
+  margin: var(--padding) auto;
+  background: var(--theme-bg);
+  color: var(--theme-color);
+}
+
+:global(.slides) {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 }
 
 :global(.slide) {
@@ -33,33 +48,34 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 20px 50px;
+  padding: var(--padding) var(--nav-size) calc(var(--padding) * 2);
   transform: translate3d(100%, 0, 0);
   z-index: 0;
-  border: 5px solid red;
   user-select: none;
   display: flex;
   flex-direction: column;
+  background-size: cover;
+  background-blend-mode: multiply; /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
 
 :global(.yellow) {
-  background: #d69833;
+  background-color: #d69833;
 }
 
 :global(.red) {
-  background: #d53f42;
+  background-color: #d50035;
 }
 
 :global(.green) {
-  background: #43dd55;
+  background-color: #43dd55;
 }
 
-:global(.orange) {
-  background: #d67422;
+:global(.blue) {
+  background-color: #261fd9;
 }
 
 :global(.pink) {
-  background: #d660d2;
+  background-color: #b425d9;
 }
 
 :global(.pagers) {
@@ -72,52 +88,107 @@ body {
   z-index: 5;
 }
 
+:global(.dots) {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+}
+
+:global(.dot) {
+  position: relative;
+  height: var(--pager-size);
+  width: var(--pager-size);
+  margin: calc(var(--padding) / 4);
+  visibility: visible;
+  border-radius: 50%;
+  cursor: pointer;
+  user-select: none;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: calc(var(--pager-size) / 3);
+    left: calc(var(--pager-size) / 3);
+    right: calc(var(--pager-size) / 3);
+    bottom: calc(var(--pager-size) / 3);
+    border-radius: inherit;
+    background: rgba(255, 255, 255, 0.3);
+  }
+
+  &:hover {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  &.activePager::before {
+    content: '';
+    background: rgba(255, 255, 255, 0.8);
+  }
+}
+
 :global(.prev),
 :global(.next) {
   position: absolute;
   top: 50%;
-  width: 2em;
+  width: 1em;
   height: 2em;
-  font-size: 25px;
-  border-radius: 50%;
+  font-size: var(--nav-size);
+  margin: 0 var(--padding);
   transform: translateY(-50%);
-  background: var(--theme-color);
-  color: #fff;
-  border: 2px solid;
+  background: rgba(0, 0, 0, 0.3);
+  color: var(--theme-color);
   display: flex;
   align-items: center;
   justify-content: center;
   visibility: visible;
+  cursor: pointer;
+  user-select: none;
+
+  &:hover {
+    background: rgba(0, 0, 0, 0.8);
+  }
 }
 
 :global(.prev) {
-  left: 10px;
+  right: 100%;
+
+  @media (max-width: 1100px) {
+    right: auto;
+    left: 0;
+  }
 }
 
 :global(.next) {
-  right: 10px;
+  left: 100%;
+
+  @media (max-width: 1100px) {
+    left: auto;
+    right: 0;
+  }
 }
 
 .pluginLoaded :global(.slide) {
-  border-color: var(--theme-color);
+  /* plugin loaded */
 }
 
 :global(.jsHook) {
   /* slide */
 }
 
-:root {
-  --speed: 0.25s;
+:global(.jsWrapper) {
+  /* slide */
 }
 
 .active {
   transform: translate3d(0%, 0, 0);
-  z-index: 2;
+  z-index: 1;
 }
 
 .previous,
 .next {
-  z-index: 3;
+  z-index: 2;
 }
 
 .previous {
@@ -137,11 +208,15 @@ body {
   }
 }
 
+:global(.slide) h2,
 :global(.log) {
-  /* log element */
-  background: black;
+  color: white;
   flex: 1;
-  margin: 20px;
-  width: calc(100% - 40px);
+  padding: var(--padding);
+  margin: var(--padding) var(--nav-size);
+  width: calc(100% - var(--nav-size) * 2);
 }
 
+:global(.log) {
+  background: var(--log-color);
+}
