--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,68 @@
 extends _layout.pug
 
+mixin arrow(dir)
+  if dir == 'next'
+     svg(style="width:1em;height:1em" viewBox="0 0 24 24")
+       path(fill="currentcolor" d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z")
+  else if dir == 'prev'
+    svg(style="width:1em;height:1em" viewBox="0 0 24 24")
+       path(fill="currentcolor" d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z")
 
 block content
-  - const colors = ['red', 'green', 'yellow', 'orange', 'pink']
+  - const colors = ['red', 'green', 'yellow', 'blue', 'pink']
+  - let slides = 0
+  - let couter = slides
   .glider
+    - slides = 4
     .pagers
-      .next ▶︎
-      .prev ◀︎
-    - const slides = 20
-    - let counter = 0
-    while ++counter <= slides
-      .slide.jsHook(class=colors[counter % colors.length])
-        h2 Slide #{counter}
-        .log
+      .prev
+        +arrow('prev')
+      .next
+        +arrow('next')
+      .dots
+        - counter = 0
+        while ++counter <= slides
+          .dot
+    .slides.jsWrapper
+      - counter = 0
+      while ++counter <= slides
+        .slide.jsHook(class=colors[counter % colors.length]
+                      style={'background-image': `url("assets/${counter}.jpg")`})
+          h2 Slide #{counter}
+          .log This element has a parallax effect
+  .glider
+    - slides = 5
+    .pagers
+      .prev
+        +arrow('prev')
+      .next
+        +arrow('next')
+      .dots
+        - counter = 0
+        while ++counter <= slides
+          .dot
+    .slides.jsWrapper
+      - counter = 0
+      while ++counter <= slides
+        .slide.jsHook(class=colors[counter % colors.length]
+                      style={'background-image': `url("assets/${counter}.jpg")`})
+          h2 Slide #{counter}
+          .log This element has a parallax effect
+  .glider
+    - slides = 2
+    .pagers
+      .prev
+        +arrow('prev')
+      .next
+        +arrow('next')
+      .dots
+        - counter = 0
+        while ++counter <= slides
+          .dot
+    .slides.jsWrapper
+      - counter = 0
+      while ++counter <= slides
+        .slide.jsHook(class=colors[counter % colors.length]
+                      style={'background-image': `url("assets/${counter}.jpg")`})
+          h2 Slide #{counter}
+          .log This element has a parallax effect
