--- a/docs/index.css
+++ b/docs/index.css
@@ -1,7 +1,8 @@
+
 body {
   margin: 0;
-  background: #fff;
-  color: #000;
+  background: #fc1e52;
+  color: #fff;
   font-family: sans-serif;
 }
 
@@ -12,14 +13,23 @@ body {
 }
 
 .glider {
-  overflow: hidden;
   position: relative;
   width: 100%;
   max-width: 900px;
-  height: 300px;
-  margin: 30px auto;
-  background: #222;
+  height: 20em;
+  margin: 1rem auto;
+  background: #fc1e52;
   color: #fff;
+}
+
+.slides {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 }
 
 .slide {
@@ -29,11 +39,10 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 20px 50px;
+  padding: 1rem 3rem 2rem;
   -webkit-transform: translate3d(100%, 0, 0);
           transform: translate3d(100%, 0, 0);
   z-index: 0;
-  border: 5px solid red;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -45,26 +54,28 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-size: cover;
+  background-blend-mode: multiply; /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
 
 .yellow {
-  background: #d69833;
+  background-color: #d69833;
 }
 
 .red {
-  background: #d53f42;
+  background-color: #d50035;
 }
 
 .green {
-  background: #43dd55;
+  background-color: #43dd55;
 }
 
-.orange {
-  background: #d67422;
+.blue {
+  background-color: #261fd9;
 }
 
 .pink {
-  background: #d660d2;
+  background-color: #b425d9;
 }
 
 .pagers {
@@ -77,19 +88,65 @@ body {
   z-index: 5;
 }
 
+.dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.dot {
+  position: relative;
+  height: 2rem;
+  width: 2rem;
+  margin: 0.25rem;
+  visibility: visible;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none
+}
+
+.dot::before {
+  content: '';
+  position: absolute;
+  top: 0.66667rem;
+  left: 0.66667rem;
+  right: 0.66667rem;
+  bottom: 0.66667rem;
+  border-radius: inherit;
+  background: rgba(255, 255, 255, .3);
+}
+
+.dot:hover {
+  background: rgba(0, 0, 0, .3);
+}
+
+.dot.a::before {
+  content: '';
+  background: rgba(255, 255, 255, .8);
+}
+
 .prev,
 .next {
   position: absolute;
   top: 50%;
-  width: 2em;
+  width: 1em;
   height: 2em;
-  font-size: 25px;
-  border-radius: 50%;
+  font-size: 3rem;
+  margin: 0 1rem;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background: #222;
+  background: rgba(0, 0, 0, .3);
   color: #fff;
-  border: 2px solid;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,66 +157,99 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   visibility: visible;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none
+}
+
+.prev:hover, .next:hover {
+  background: rgba(0, 0, 0, .8);
 }
 
 .prev {
-  left: 10px;
+  right: 100%
 }
+
+@media (max-width: 1100px) {
+
+  .prev {
+    right: auto;
+    left: 0;
+  }
+  }
 
 .next {
-  right: 10px;
+  left: 100%
 }
 
-.a .slide {
-  border-color: #222;
+@media (max-width: 1100px) {
+
+  .next {
+    left: auto;
+    right: 0;
+  }
+  }
+
+.b .slide {
+  /* plugin loaded */
 }
 
 .jsHook {
   /* slide */
 }
 
-.b {
-  -webkit-transform: translate3d(0%, 0, 0);
-          transform: translate3d(0%, 0, 0);
-  z-index: 2;
-}
-
-.c,
-.d {
-  z-index: 3;
+.jsWrapper {
+  /* slide */
 }
 
 .c {
+  -webkit-transform: translate3d(0%, 0, 0);
+          transform: translate3d(0%, 0, 0);
+  z-index: 1;
+}
+
+.d,
+.e {
+  z-index: 2;
+}
+
+.d {
   -webkit-transform: translate3d(-100%, 0, 0);
           transform: translate3d(-100%, 0, 0);
 }
 
-.d {
+.e {
   -webkit-transform: translate3d(100%, 0, 0);
           transform: translate3d(100%, 0, 0);
 }
 
-.b,
-.d,
-.e {
+.c,
+.e,
+.f {
 }
 
-.b.f,
-  .b.f.g,
-  .d.f,
-  .d.f.g,
-  .e.f,
-  .e.f.g {
+.c.g,
+  .c.g.h,
+  .e.g,
+  .e.g.h,
+  .f.g,
+  .f.g.h {
   transition: none;
 }
 
+.slide h2,
 .log {
-  /* log element */
-  background: black;
+  color: white;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 20px;
-  width: calc(100% - 40px);
+  padding: 1rem;
+  margin: 1rem 3rem;
+  width: calc(100% - 3rem * 2);
 }
 
+.log {
+  background: rgba(0, 0, 0, .2);
+}
