--- a/demo/main.css
+++ b/demo/main.css
@@ -12,6 +12,8 @@ body {
   margin: 0;
   font-family: sans-serif;
   min-width: 320px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 main {
@@ -26,6 +28,8 @@ main {
 :global(pre.prettyprint) {
   display: block;
   background-color: #333;
+  overflow: auto;
+  max-height: 300px;
 }
 
 :global(pre .nocode) {
@@ -94,6 +98,8 @@ main {
 *::before,
 *::after {
   box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 :global(.glider) {
@@ -123,12 +129,12 @@ main {
   right: 0;
   bottom: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   padding: var(--padding) var(--nav-size) calc(var(--padding) * 2);
   transform: translate3d(100%, 0, 0);
   z-index: 0;
   user-select: none;
-  display: flex;
-  flex-direction: column;
   background-size: cover;
   background-blend-mode: multiply; /* stylelint-disable-line plugin/no-unsupported-browser-features */
 
