--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -4,7 +4,7 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no")
     title= `${fileName} | ${name} | ${description}`
     link(rel="icon"  type="image/png"  href="favico.png")
     link(rel="stylesheet" href=`${fileName}.css?${timestamp}`)
