chore(gh-pages):

--- a/docs/index.css
+++ b/docs/index.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
   font-family: sans-serif;
   min-width: 320px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 main {
@@ -17,6 +19,8 @@ main {
 pre.prettyprint {
   display: block;
   background-color: #333;
+  overflow: auto;
+  max-height: 300px;
 }
 
 pre .nocode {
@@ -85,6 +89,8 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
 *::before,
 *::after {
   box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .glider {
@@ -114,6 +120,13 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
   right: 0;
   bottom: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 1rem 3rem 2rem;
   -webkit-transform: translate3d(100%, 0, 0);
           transform: translate3d(100%, 0, 0);
@@ -122,13 +135,6 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   background-size: cover;
   background-blend-mode: multiply /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
