--- a/views/index.pug
+++ b/views/index.pug
@@ -141,3 +141,9 @@ block content
         })
       }
     })
+  h2 Custom: cover
+  h3 With parallax
+  .glider.ex3
+    +pagers()
+    +dots(7)
+    +slides(7, true)
