--- a/demo/main.css
+++ b/demo/main.css
@@ -136,6 +136,7 @@ main {
   z-index: 0;
   user-select: none;
   background-size: cover;
+  background-position: 50% 50%;
   background-blend-mode: multiply; /* stylelint-disable-line plugin/no-unsupported-browser-features */
 
   &.current {
@@ -154,6 +155,20 @@ main {
 
   &.next {
     transform: translate3d(100%, 0, 0);
+  }
+}
+
+:global(.ex2 .slide) {
+  & .previous {
+    z-index: 1;
+  }
+
+  & .current {
+    z-index: 2;
+  }
+
+  & .next {
+    z-index: 3;
   }
 }
 
@@ -272,6 +287,10 @@ main {
 
 .pluginLoaded :global(.slide) {
   /* plugin loaded */
+}
+
+.init {
+  /* plugin initialized */
 }
 
 :global(.jsHook) {
