docs(examples): new examples

--- a/demo/main.css
+++ b/demo/main.css
@@ -1,13 +1,3 @@
-
-:root {
-  --theme-bg: #fff;
-  --theme-color: #111;
-  --log-color: rgba(255, 255, 255, 0.5);
-  --padding: 1rem;
-  --nav-size: 3rem;
-  --pager-size: 2rem;
-}
-
 body {
   margin: 0;
   font-family: sans-serif;
@@ -17,81 +7,7 @@ body {
 }
 
 main {
-  max-width: 1200px;
   margin: auto;
-  padding: var(--padding);
-  background: var(--theme-bg);
-  color: var(--theme-color);
-}
-
-/* desert scheme ported from vim to google prettify */
-:global(pre.prettyprint) {
-  display: block;
-  background-color: #333;
-  overflow: auto;
-  font-size: 16px;
-}
-
-:global(pre .nocode) {
-  background-color: none;
-  color: #000;
-} /* no-code          - black        */
-
-:global(pre .str) {
-  color: #ffa0a0;
-} /* string           - pink         */
-
-:global(pre .kwd) {
-  color: #f0e68c;
-  font-weight: bold;
-} /* keyword         - lightyellow   */
-
-:global(pre .com) {
-  color: #87ceeb;
-} /* comment         - skyblue       */
-
-:global(pre .typ) {
-  color: #98fb98;
-} /* type            - lightgreen    */
-
-:global(pre .lit) {
-  color: #cd5c5c;
-} /* literal         - darkred       */
-
-:global(pre .pun) {
-  color: #fff;
-} /* punctuation      - white        */
-
-:global(pre .pln) {
-  color: #fff;
-} /* plaintext        - white        */
-
-:global(pre .tag) {
-  color: #f0e68c;
-  font-weight: bold;
-} /* html/xml tag     - lightyellow  */
-
-:global(pre .atn) {
-  color: #bdb76b;
-  font-weight: bold;
-} /* attribute name   - khaki        */
-
-:global(pre .atv) {
-  color: #ffa0a0;
-} /* attribute value  - pink          */
-
-:global(pre .dec) {
-  color: #98fb98;
-} /* decimal          - lightgreen    */
-
-:global(ol.linenums) {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #aeaeae;
-} /* linenums         - lightgrey      */
-
-:global(li.l0,li.l1,li.l2,li.l3,li.l5,li.l6,li.l7,li.l8) {
-  list-style-type: none;
 }
 
 *,
@@ -99,207 +15,5 @@ main {
 *::after {
   box-sizing: border-box;
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-:global(.glider) {
-  position: relative;
-  width: 100%;
-  max-width: 900px;
-  height: 20em;
-  margin: var(--padding) auto;
-  background: var(--theme-bg);
-  color: var(--theme-color);
-}
-
-:global(.slides) {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 0;
-}
-
-:global(.slide) {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  padding: var(--padding) var(--nav-size) calc(var(--padding) * 2);
-  transform: translate3d(100%, 0, 0);
-  z-index: 0;
-  user-select: none;
-  background-size: cover;
-  background-position: 50% 50%;
-
-  &.current {
-    transform: translate3d(0%, 0, 0);
-    z-index: 1;
-  }
-
-  &.previous,
-  &.next {
-    z-index: 2;
-  }
-
-  &.previous {
-    transform: translate3d(-100%, 0, 0);
-  }
-
-  &.next {
-    transform: translate3d(100%, 0, 0);
-  }
-}
-
-:global(.ex2 .slide) {
-  & .previous {
-    z-index: 1;
-  }
-
-  & .current {
-    z-index: 2;
-  }
-
-  & .next {
-    z-index: 3;
-  }
-}
-
-:global(.pagers) {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  visibility: hidden;
-  z-index: 2;
-}
-
-:global(.dots) {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  z-index: 2;
-  background: rgba(0, 0, 0, 0.3);
-  pointer-events: none;
-}
-
-:global(.dot) {
-  position: relative;
-  height: var(--pager-size);
-  width: var(--pager-size);
-  margin: calc(var(--padding) / 4);
-  visibility: visible;
-  border-radius: 50%;
-  cursor: pointer;
-  user-select: none;
-  pointer-events: all;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: calc(var(--pager-size) / 3);
-    left: calc(var(--pager-size) / 3);
-    right: calc(var(--pager-size) / 3);
-    bottom: calc(var(--pager-size) / 3);
-    border-radius: inherit;
-    background: rgba(255, 255, 255, 0.3);
-  }
-
-  &:hover {
-    background: rgba(0, 0, 0, 0.3);
-  }
-
-  &.active::before {
-    content: '';
-    background: rgba(255, 255, 255, 0.8);
-  }
-}
-
-:global(.prev),
-:global(.next) {
-  position: absolute;
-  top: 50%;
-  width: 1em;
-  height: 2em;
-  font-size: var(--nav-size);
-  margin: 0 var(--padding);
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.3);
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  visibility: visible;
-  cursor: pointer;
-  user-select: none;
-
-  &:hover {
-    background: rgba(0, 0, 0, 0.8);
-  }
-}
-
-:global(.prev) {
-  right: 100%;
-
-  @media (max-width: 1100px) {
-    right: auto;
-    left: 0;
-  }
-}
-
-:global(.next) {
-  left: 100%;
-
-  @media (max-width: 1100px) {
-    left: auto;
-    right: 0;
-  }
-}
-
-.pluginLoaded :global(.slide) {
-  /* plugin loaded */
-}
-
-.init {
-  /* plugin initialized */
-}
-
-:global(.jsHook) {
-  /* slide */
-}
-
-:global(.jsWrapper) {
-  /* slide */
-}
-
-:global(.jsDot) {
-  /* dot */
-}
-
-:global(.jsNext) {
-  /* next */
-}
-
-:global(.jsPrev) {
-  /* prev */
-}
-
-:global(.slide) h2,
-:global(.log) {
-  flex: 1;
-  padding: var(--padding);
-  margin: var(--padding) var(--nav-size);
-  width: calc(100% - var(--nav-size) * 2);
-  background: var(--log-color);
-  color: #000;
+  -webkit-tap-highlight-color: transparent;
 }
