--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -1,15 +1,23 @@
-- const timestamp = Date.now()
+-
+  const classNames = (...names) => names.join(' ')
+  const {styles} = data
+  const timestamp = Date.now()
+  const currentYear = (new Date()).getFullYear()
 doctype
 html
   head
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no")
-    title= `${fileName} | ${name} | ${description}`
+    title= `${data.fileName} | ${data.name} | ${data.description}`
     link(rel="icon"  type="image/png"  href="favico.png")
-    link(rel="stylesheet" href=`${fileName}.css?${timestamp}`)
+    link(rel="stylesheet" href=`${data.fileName}.css?${timestamp}`)
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js")
   body
+    //- header
+      h1= data.name
     main
       block content
-    script(src=`${fileName}.js?${timestamp}`)
+    //- footer
+      p= `Copyright © ${currentYear} by Gregor Adams`
+    script(src=`${data.fileName}.js?${timestamp}`)
